# cs_dieguito

./: .gitignore  README.md  makefile  pyproject.toml
correct_score/: betfair.py  database.py  defs_analise_jogos_dia.py  defs_monitoramento_entradas.py  dockerfile  helpers.py  main.py  requeriments.txt  resultado_do_dia.py  telegram.py
db_script/: create_table_cs.sql
tests/: tests_betfair.py
