[tool.poetry]
name = "cs-dieguito"
version = "0.1.0"
description = ""
authors = ["Davies Wsl2 <daviesaraujo@wsl2.com>"]
readme = "README.md"
packages = [{include = "cs_dieguito"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
mysql-connector-python = "^8.0.31"
selenium = "^4.7.2"
protobuf = "3.18.3"
python-dotenv = "^0.21.0"
pyrogram = "^2.0.93"
tgcrypto = "^1.2.5"
pandas = "^1.5.2"
lxml = "^4.9.2"
schedule = "^1.1.0"
sqlalchemy = "^2.0.10"
pymysql = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
